# tinyrigel

./: .gitignore  Cargo.toml  README.md  build.rs  rigel_usbview_out.txt
.github/workflows/: main.yml
backends/linux-bindgen/: build.rs  wrapper.h
backends/linux-bindgen-TODO-DELETEME/: Cargo.toml
backends/linux-bindgen/src/: lib.rs
backends/macos-xcode-ref/tinyrigel-lib-and-tests/TestHostDummyApp/Base.lproj/: MainMenu.xib
backends/macos-xcode-ref/tinyrigel-lib-and-tests/tinyrigel-lib-and-tests/: Info.plist  tinyrigel_lib_and_tests.h
backends/macos-xcode-ref/tinyrigel-lib-and-tests/tinyrigel-lib-and-tests.xcodeproj/: project.pbxproj
backends/macos-xcode-ref/tinyrigel-macos-cmdl-objc/: .gitignore
backends/macos-xcode-ref/tinyrigel-macos-cmdl-objc/tinyrigel-macos-cmdl-objc/: main.m
backends/windows-bindings/: Cargo.toml  build.rs
backends/windows-bindings/src/: lib.rs
bindings-macos/: Cargo.toml
bindings-macos/tinyrigel-lib-and-tests/TestHostDummyApp/: AppDelegate.h  AppDelegate.m  Info.plist  main.m
bindings-macos/tinyrigel-lib-and-tests/Tests/: Info.plist  Tests.m
bindings-macos/tinyrigel-lib-and-tests/tinyrigel-lib-and-tests/: tinyrigel_lib_and_tests.m
bindings-macos/tinyrigel-lib-and-tests/tinyrigel-lib-and-tests.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
bindings-macos/tinyrigel-lib-and-tests/tinyrigel-lib-and-tests.xcodeproj/project.xcworkspace/xcuserdata/nickjbenson.xcuserdatad/: UserInterfaceState.xcuserstate
bindings-macos/tinyrigel-lib-and-tests/tinyrigel-lib-and-tests.xcodeproj/xcuserdata/nickjbenson.xcuserdatad/xcschemes/: xcschememanagement.plist
bindings-macos/tinyrigel-macos-cmdl-objc/tinyrigel-macos-cmdl-objc/: Info.plist  main.m
bindings-macos/tinyrigel-macos-cmdl-objc/tinyrigel-macos-cmdl-objc.xcodeproj/: project.pbxproj
bindings-macos/tinyrigel-macos-cmdl-objc/tinyrigel-macos-cmdl-objc.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
bindings-macos/tinyrigel-macos-cmdl-objc/tinyrigel-macos-cmdl-objc.xcodeproj/project.xcworkspace/xcuserdata/nickjbenson.xcuserdatad/: UserInterfaceState.xcuserstate
bindings-macos/tinyrigel-macos-cmdl-objc/tinyrigel-macos-cmdl-objc.xcodeproj/xcuserdata/nickjbenson.xcuserdatad/xcschemes/: xcschememanagement.plist
bindings-windows/: Cargo.toml  build.rs
bindings-winrt/: Cargo.toml  build.rs
bindings-winrt/src/: lib.rs
examples/: grab_frame.rs
examples/archive/: grab_frame.rs
examples/archive/rusb/: find_leap_devices.rs  rusb_list_devices.rs  rusb_read_device.rs
src/: calib.rs  core.rs  lib.rs  usb.rs  usb_info.rs
src/archive/: lib.rs  rigel.rs
src/tests/: mod.rs  tests_linux.rs  tests_macos.rs  tests_usb.rs  tests_windows.rs
src/tests/tests_windows/: mod.rs  windows_device_capture_tests.rs  windows_dshow_tests.rs  windows_usb_device_tests.rs  windows_winusb_tests.rs
