[package]
name = "tinyrigel"
version = "0.1.0"
authors = ["Nick Benson <nickjbenson@gmail.com>"]
edition = "2018"

# Compile as a rust library, C-style dynamic library, and static library.
[lib]
crate-type = ["lib", "cdylib", "staticlib"]

# Dependencies for all platforms.
[dependencies]
image = "0.23.12"

# Platform Backend Dependencies
# ---

# Windows backend.
[target.'cfg(target_os = "windows")'.dependencies]
bindings-windows = { path = "bindings-windows" }
windows = { git = "https://github.com/microsoft/windows-rs" }

# MacOS and iOS backends.
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
bindings-macos = { path = "bindings-macos" }
libc = "0.2"
objc = "0.2"
cocoa-foundation = "0.1.0"
core-foundation = "0.9.1"
lazy_static = "1.4.0"

# Linux. (Currently only testing with Ubuntu 20.04.1 LTS, 2021-01-24)
[target.'cfg(target_os = "linux")'.dependencies]
linux-bindgen = { path = "backends/linux-bindgen" }
nix = "0.19.1"
v4l = "0.12.0"
