[package]
name = "bindings-winrt"
version = "0.1.0"
authors = ["Nicholas Benson <nickjbenson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winrt = { git = "https://github.com/microsoft/winrt-rs" }

[build-dependencies]
winrt = { git = "https://github.com/microsoft/winrt-rs" }

[features]
# rust_analyzer feature for conditionally compiling the verbose, expanded version of the bindings for auto-completion while editing.
rust_analyzer = []

[package.metadata.winrt.dependencies]
# "Microsoft.Windows.SDK.Contracts" = "10.0.19041.1"
"Microsoft.Windows.SDK.Contracts" = "10.0.18362.0"
