[package]
name = "windows-bindings"
version = "0.1.0"
authors = ["Nick Benson <nickjbenson@gmail.com>"]
edition = "2018"

# windows-rs: https://github.com/microsoft/windows-rs

[dependencies]
windows = { git = "https://github.com/microsoft/windows-rs" }
 
[build-dependencies]
windows = { git = "https://github.com/microsoft/windows-rs" }